// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fontWeight renders 0 1`] = `
Array [
  .c0 {
  font-weight: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-weight: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-weight: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-weight: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`fontWeight renders function 1`] = `
Array [
  .c0 {
  font-weight: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  font-weight: has;
}

<div
    className="c0"
  />,
  .c0 {
  font-weight: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  font-weight: has;
}

<div
    className="c0"
  />,
]
`;

exports[`fontWeight renders invalid theme path 1`] = `
Array [
  .c0 {
  font-weight: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-weight: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-weight: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-weight: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`fontWeight renders negative number 1`] = `
Array [
  .c0 {
  font-weight: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-weight: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-weight: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  font-weight: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`fontWeight renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  font-weight: July;
}

@media screen and (min-width:November) {
  .c0 {
    font-weight: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-weight: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-weight: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-weight: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  font-weight: July;
}

@media screen and (min-width:November) {
  .c0 {
    font-weight: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-weight: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-weight: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-weight: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  font-weight: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-weight: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-weight: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-weight: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-weight: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  font-weight: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-weight: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-weight: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-weight: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-weight: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontWeight renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    font-weight: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-weight: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-weight: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-weight: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    font-weight: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-weight: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-weight: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-weight: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-weight: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-weight: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-weight: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-weight: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-weight: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-weight: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-weight: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-weight: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontWeight renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  font-weight: July;
}

@media May {
  .c0 {
    font-weight: August;
  }
}

@media April {
  .c0 {
    font-weight: September;
  }
}

@media January {
  .c0 {
    font-weight: November;
  }
}

@media April {
  .c0 {
    font-weight: August;
  }
}

@media June {
  .c0 {
    font-weight: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  font-weight: July;
}

@media May {
  .c0 {
    font-weight: August;
  }
}

@media April {
  .c0 {
    font-weight: September;
  }
}

@media January {
  .c0 {
    font-weight: November;
  }
}

@media April {
  .c0 {
    font-weight: August;
  }
}

@media June {
  .c0 {
    font-weight: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  font-weight: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-weight: November;
  }
}

@media April {
  .c0 {
    font-weight: January;
  }
}

@media January {
  .c0 {
    font-weight: December;
  }
}

@media April {
  .c0 {
    font-weight: April;
  }
}

@media June {
  .c0 {
    font-weight: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  font-weight: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-weight: November;
  }
}

@media April {
  .c0 {
    font-weight: January;
  }
}

@media January {
  .c0 {
    font-weight: December;
  }
}

@media April {
  .c0 {
    font-weight: April;
  }
}

@media June {
  .c0 {
    font-weight: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontWeight renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    font-weight: July;
  }
}

@media April {
  .c0 {
    font-weight: August;
  }
}

@media January {
  .c0 {
    font-weight: September;
  }
}

@media April {
  .c0 {
    font-weight: November;
  }
}

@media June {
  .c0 {
    font-weight: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    font-weight: July;
  }
}

@media April {
  .c0 {
    font-weight: August;
  }
}

@media January {
  .c0 {
    font-weight: September;
  }
}

@media April {
  .c0 {
    font-weight: November;
  }
}

@media June {
  .c0 {
    font-weight: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-weight: January;
  }
}

@media April {
  .c0 {
    font-weight: December;
  }
}

@media January {
  .c0 {
    font-weight: April;
  }
}

@media April {
  .c0 {
    font-weight: May;
  }
}

@media June {
  .c0 {
    font-weight: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-weight: January;
  }
}

@media April {
  .c0 {
    font-weight: December;
  }
}

@media January {
  .c0 {
    font-weight: April;
  }
}

@media April {
  .c0 {
    font-weight: May;
  }
}

@media June {
  .c0 {
    font-weight: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontWeight renders postitive number 1`] = `
Array [
  .c0 {
  font-weight: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-weight: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-weight: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  font-weight: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`fontWeight renders string 1`] = `
Array [
  .c0 {
  font-weight: July;
}

<div
    className="c0"
  />,
  .c0 {
  font-weight: July;
}

<div
    className="c0"
  />,
  .c0 {
  font-weight: June;
}

<div
    className="c0"
  />,
  .c0 {
  font-weight: June;
}

<div
    className="c0"
  />,
]
`;

exports[`fontWeight renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`fontWeight renders valid theme path 1`] = `
Array [
  .c0 {
  font-weight: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-weight: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-weight: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-weight: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
